--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "django (>=5.2.1,<6.0.0)"
+    "django (>=5.2.1,<6.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)"
 ]
 
 
